remove titles and fix height on mobile

--- a/src/components/molecules/Roadmap/roadmap.scss
+++ b/src/components/molecules/Roadmap/roadmap.scss
@@ -15,7 +15,7 @@
     align-items: center;
   }
   &__timeline_mobile {
-    height: 48.5rem;
+    min-height: 48.5rem;
     width: 25px;
     border-radius: 24px;
     margin: 0;
